[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/Menu/SettingsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Menu/SaveMenu.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -66.0
margin_right = 75.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="Options"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
text = "NEW GAME"

[node name="Load" type="Button" parent="Options"]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 150, 30 )
text = "LOAD GAME"

[node name="Settings" type="Button" parent="Options"]
margin_top = 68.0
margin_right = 150.0
margin_bottom = 98.0
rect_min_size = Vector2( 150, 30 )
text = "SETTINGS"

[node name="Quit" type="Button" parent="Options"]
margin_top = 102.0
margin_right = 150.0
margin_bottom = 132.0
rect_min_size = Vector2( 150, 30 )
text = "QUIT"

[node name="version" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -86.0
margin_bottom = 14.0
text = "v0.0.0 Demo "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -209.0
margin_top = -14.0
text = "Copyright Â© 2021 Jack Anderson "

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="SaveMenu" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Options/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Options/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Options/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
